# parBTE

./: .gitignore  CMakeLists.txt  README.md
examples/: 2D_5by5_p1.in  2D_5by5_p5.in  3D_5by5by5_p1.in  3D_5by5by5_p7.in  user_polar_2D.in  user_polar_3D.in  user_polar_600k.in
src/: aluminiumtemp.f90  amat_batched_mod.f90  amat_noBatched_mod.f90  amat_parent_mod.f90  avg_ttop_calc.f90  avgvelocity.f90  bsnord_swa_mod.f90  bsnord_swa_mod_aMat.f90  bsnord_swa_mod_aMat_bch.f90  constants_module.f90  epcalc.f90  gauss_quad.f90  grid_and_boundary.f90  grid_module.f90  initialize.f90  intergratedintensity.f90  iwallcal.f90  petsc_matAssembled_mod.f90  petsc_solver_mod.f90  polar.f90  postprocess_vtk.f90  ppnodal.f90  precisions_module.f90  profiler_module.f90  reflection.f90  relaxtime_broido.f90  siliconthermalcond.f90  snweights.f90  solver.f90  tempcalc_notbc.f90  tri.f90  update.f90  utilities.f90  variabledt.f90  variables_module.f90
